--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -32,9 +32,9 @@
       Prompt: aparece uma caixa de texto.
   -->
   <script>
-    window.alert('Minha primeira mensagem')
-    window.confirm('Está gostando de JavaScript?')
-    window.prompt('Qual seu nome?')
+    window.alert('Minha primeira mensagem') //Aparece um alerta uma mensagem com opção de Cancelamento ou confirmação;
+    window.confirm('Está gostando de JavaScript?')//aparece 
+    window.prompt('Qual seu nome?')//aparece uma caixa de texto.
   </script>
 </body>
 </html>
